feat: recipe wider, ragged right, adjust spacing between paragraphs

--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass[openany, oneside, 12pt]{book}
+\documentclass[openany, oneside, 11pt]{book}
 \input{preamble}
 
 \title{My Recipe Book}
@@ -13,11 +13,11 @@
 \mainmatter
 
 \part{Appetizers}
-\fancyfoot[C]{\small\textsf{APPETIZERS}}
+\fancyfoot[C]{\small{Appetizers}}
 \include{recipe_001}
 
 \part{Other}
-\fancyfoot[C]{\small\textsf{OTHER}}
+\fancyfoot[C]{\small{Other}}
 \include{recipe_002}
 
 \end{document}
