--- a/preamble.tex
+++ b/preamble.tex
@@ -9,25 +9,35 @@
 \usepackage{marginnote} % For margin notes
 \usepackage[absolute,overlay]{textpos}
 \usepackage{titlesec}
+\usepackage[document]{ragged2e}  % align left
+\usepackage[skip=12pt]{parskip}
 
 % Geometry setup for margins
 \geometry{
-  left=75mm, 
-  right=25mm,
+  left=85mm, 
+  right=15mm,
   top=25mm,
   bottom=50mm,
-  marginparwidth=40mm,
+  marginparwidth=50mm,
   marginparsep=10mm,
 }
 \reversemarginpar % This moves the margin notes to the left
 \setlength{\footskip}{25mm} % Adjust the value as needed
+
+\renewcommand{\marginnote}[1]{%
+    \marginpar{%
+        \raggedright % Left-align text in the margin
+        #1%
+    }%
+}
+
 
 % Disable "Chapter X" from appearing
 \makeatletter
 \renewcommand{\@makechapterhead}[1]{%
   {\parindent \z@ \raggedright \normalfont
     % \vspace*{-50mm} % Adjust the title position upwards
-    \Huge \bfseries \sffamily \hspace{-50mm}#1\par\nobreak
+    \Huge \bfseries \sffamily \hspace{-60mm}#1\par\nobreak
     \vspace*{35mm} % Add some space after the title if needed
     }
     \thispagestyle{fancy}  % Keep the page number style
@@ -37,7 +47,7 @@
 
 % Header/Footer setup
 \fancyhf{} % Clear existing header/footer
-\fancyfoot[L]{\Huge\textsf{\hspace{-50mm}\thepage}} % Large page number moved 1 inch left
+\fancyfoot[L]{\Huge\textsf{\hspace{-60mm}\thepage}} % Large page number moved 1 inch left
 % \fancyfoot[C]{\large\textsf{\partmark}} % Center the part title (e.g., "Appetizers") without "Part 1"
 \renewcommand{\headrulewidth}{0pt} % No header rule
 \renewcommand{\footrulewidth}{0pt} % No footer rule
