--- a/recipe_001.tex
+++ b/recipe_001.tex
@@ -1,4 +1,5 @@
 \chapter{Delicious Pancakes}
+\index{some}
 
 % \begin{figure*}[h]
 %     \centering
@@ -6,7 +7,6 @@
 % \end{figure*}
 
 \marginnote{
-  % \raggedright
     \textbf{Makes 24 cookies} \\
     Prep time: 2+ hours \\
     Cook time: 7-10 minutes \\
@@ -31,7 +31,6 @@
     3 cups icing sugar, sifted
 }
 
-\vspace{-25pt}
 In a large bowl, combine the dry ingredients (flour, sugar, baking powder, and salt). In another bowl, whisk together the milk, egg, and melted butter.
 
 Gradually add the wet ingredients to the dry ingredients, stirring until just combined.
