--- a/main.tex
+++ b/main.tex
@@ -16,12 +16,16 @@
 
 
 \mainmatter
+
+\ensureevenpage
 \part{Appetizers}
 \fancyfoot[C]{\small{Appetizers}}
 \userecipegeometry
 \include{recipe_001}
 \restoregeometry
 
+% make next page on even page
+\ensureevenpage
 \part{Other}
 \fancyfoot[C]{\small{Other}}
 \userecipegeometry
