nit: index runs but isn't formatted correctly

--- a/main.tex
+++ b/main.tex
@@ -24,7 +24,6 @@
 \include{recipe_001}
 \restoregeometry
 
-% make next page on even page
 \ensureevenpage
 \part{Other}
 \fancyfoot[C]{\small{Other}}
@@ -34,7 +33,7 @@
 
 
 \backmatter
-% \printindex
+\printindex
 
 \end{document}
 
